# b2b-rfq-platform

./: .gitignore  README.md  pyproject.toml
app/api/v1/: rfq.py
app/models/: rfq.py
backend_app/: config.py  main.py  pyproject.toml
backend_app/alembic/: env.py
backend_app/alembic/versions/: 085665bc01e0_add_tables.py  629448ec0714_initial_migration.py  a22a30acaeab_initial_migration.py  e6ab9e3abdb7_initial_migration.py
backend_app/api/v1/: chat.py
backend_app/database/: data_base.py
backend_app/db/: session.py
backend_app/graph/: state.py
backend_app/graph/flows/: chat_to_rfq.py
backend_app/models/: models.py  rfq.py
backend_app/routes/: admin_routes.py  authentication_routes.py  chat_routes.py  customer_routes.py  factory_routes.py  payment_order_routes.py
backend_app/schemas/: rfq.py
backend_app/utils/: deps.py  schemas.py  util.py  validation.py
