[tool.poetry]
name = "b2b-rfq-platform"
version = "0.1.0"
description = "AI-powered B2B RFQ platform with LangGraph"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27.0"